--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0023.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0023.html
@@ -408,9 +408,14 @@
             <ins title="nlp 2.00">cf.</ins>
           </span>
         </span>
-        <span id="w_75" class="ocr_word" title="bbox 725 1078 743 1109">
+        <span id="w_75_0" class="ocr_word" title="bbox 725 1078 743 1109">
           <span class="alternatives">
-            <ins title="nlp 2.00">ι</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_75_1" class="ocr_word" title="bbox 725 1078 743 1109">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_76" class="ocr_word" title="bbox 780 1064 898 1122">
@@ -441,11 +446,6 @@
         <span id="w_81" class="ocr_word" title="bbox 1434 1057 1585 1126" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀρχῆς</ins>
-          </span>
-        </span>
-        <span id="w_82" class="ocr_word" title="bbox 1624 1066 1804 1127" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔλεγον,</ins>
           </span>
         </span>
       </span>
@@ -771,19 +771,19 @@
             <ins title="nlp 2.00">ad</ins>
           </span>
         </span>
-        <span id="w_145" class="ocr_word" title="bbox 678 1745 696 1775">
+        <span id="w_145_0" class="ocr_word" title="bbox 678 1745 696 1775">
           <span class="alternatives">
-            <ins title="nlp 2.00">I</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_145_1" class="ocr_word" title="bbox 678 1745 696 1775">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_146" class="ocr_word" title="bbox 729 1730 814 1789">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">45,</ins>
-          </span>
-        </span>
-        <span id="w_147" class="ocr_word" title="bbox 845 1730 928 1776">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">22.</ins>
           </span>
         </span>
       </span>
@@ -882,9 +882,14 @@
             <ins title="nlp 2.00">c.</ins>
           </span>
         </span>
-        <span id="w_166" class="ocr_word" title="bbox 557 1966 595 1997">
+        <span id="w_166_0" class="ocr_word" title="bbox 557 1966 595 1997">
           <span class="alternatives">
-            <ins title="nlp 2.00">π</ins>
+            <ins class="alt" title="nlp 2.00">11</ins>
+          </span>
+        </span>
+        <span id="w_166_1" class="ocr_word" title="bbox 557 1966 595 1997">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_167" class="ocr_word" title="bbox 625 1952 744 2010">
@@ -910,11 +915,6 @@
         <span id="w_171" class="ocr_word" title="bbox 1242 1945 1494 2014" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">πορθμόν :</ins>
-          </span>
-        </span>
-        <span id="w_172" class="ocr_word" title="bbox 1529 1953 1806 2012">
-          <span class="alternatives">
-            <ins title="nlp 2.00">sequuntur</ins>
           </span>
         </span>
       </span>
@@ -1008,16 +1008,11 @@
         </span>
         <span id="w_190" class="ocr_word" title="bbox 1686 2115 1803 2162" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προ-</ins>
+            <ins title="nlp 2.00">προκείμενον]</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 105 2169 1804 2236">
-        <span id="w_191" class="ocr_word" title="bbox 105 2170 350 2235" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κείμενον]</ins>
-          </span>
-        </span>
         <span id="w_192" class="ocr_word" title="bbox 394 2189 691 2221" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπανακτέον</ins>
@@ -1203,9 +1198,14 @@
             <ins title="nlp 2.00">cf.</ins>
           </span>
         </span>
-        <span id="w_229" class="ocr_word" title="bbox 560 2559 577 2589">
+        <span id="w_229_0" class="ocr_word" title="bbox 560 2559 577 2589">
           <span class="alternatives">
-            <ins title="nlp 2.00">ι</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_229_1" class="ocr_word" title="bbox 560 2559 577 2589">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_230" class="ocr_word" title="bbox 620 2544 703 2604">
@@ -1241,11 +1241,6 @@
         <span id="w_236" class="ocr_word" title="bbox 1364 2541 1587 2605" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">νήδυμος</ins>
-          </span>
-        </span>
-        <span id="w_237" class="ocr_word" title="bbox 1632 2537 1807 2605" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὕπνος,</ins>
           </span>
         </span>
       </span>
@@ -1374,9 +1369,14 @@
             <ins title="nlp 2.00">οἴσαντες</ins>
           </span>
         </span>
-        <span id="w_262" class="ocr_word" title="bbox 1073 2760 1133 2828">
+        <span id="w_262_0" class="ocr_word" title="bbox 1073 2760 1133 2828">
           <span class="alternatives">
-            <ins title="nlp 2.00">(π</ins>
+            <ins class="alt" title="nlp 2.00">(11</ins>
+          </span>
+        </span>
+        <span id="w_262_1" class="ocr_word" title="bbox 1073 2760 1133 2828">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_263" class="ocr_word" title="bbox 1169 2765 1288 2826">
@@ -1397,11 +1397,6 @@
         <span id="w_266" class="ocr_word" title="bbox 1602 2766 1667 2810">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">22</ins>
-          </span>
-        </span>
-        <span id="w_267" class="ocr_word" title="bbox 1703 2762 1802 2823" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καί,</ins>
           </span>
         </span>
       </span>
