--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0045.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0045.html
@@ -309,9 +309,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 127 778 1822 849">
-        <span id="w_57" class="ocr_word" title="bbox 127 804 192 849" lang="grc">
+        <span id="w_57_0" class="ocr_word" title="bbox 127 804 192 849">
           <span class="alternatives">
-            <ins title="nlp 2.00">μὴ ἀποτυφλούμενος,</ins>
+            <ins class="alt" title="nlp 2.00">μὴ</ins>
+          </span>
+        </span>
+        <span id="w_57_1" class="ocr_word" title="bbox 127 804 192 849">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἀποτυφλούμενος,</ins>
           </span>
         </span>
         <span id="w_59" class="ocr_word" title="bbox 739 778 764 830" lang="grc">
@@ -1426,7 +1431,7 @@
         </span>
         <span id="w_276" class="ocr_word" title="bbox 808 2720 956 2788" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνὴρ</ins>
+            <ins title="nlp 2.00">(ἀνὴρ</ins>
           </span>
         </span>
         <span id="w_277" class="ocr_word" title="bbox 1005 2723 1059 2771" lang="grc">
@@ -1493,7 +1498,7 @@
         </span>
         <span id="w_289" class="ocr_word" title="bbox 1439 2894 1491 2933">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">80</ins>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
         <span id="w_290" class="ocr_word" title="bbox 1524 2885 1757 2932" lang="grc">
