--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0035.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0035.html
@@ -758,12 +758,7 @@
       <span class="ocr_line" title="bbox 129 1648 1819 1717">
         <span id="w_151" class="ocr_word" title="bbox 129 1650 516 1713" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπιφανέστατος</ins>
-          </span>
-        </span>
-        <span id="w_152" class="ocr_word" title="bbox 529 1689 543 1716">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἐπιφανέστατος,</ins>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 594 1650 978 1716" lang="grc">
