--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0024.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0024.html
@@ -90,14 +90,14 @@
             <ins title="nlp 2.00">emblema</ins>
           </span>
         </span>
-        <span id="w_15" class="ocr_word" title="bbox 1435 372 1543 438" lang="grc">
+        <span id="w_15_0" class="ocr_word" title="bbox 1435 372 1543 438">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τοῦ</ins>
+            <ins class="alt" title="nlp 2.00">(τοῦ</ins>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 1581 375 1867 443" lang="grc">
+        <span id="w_15_1" class="ocr_word" title="bbox 1435 372 1543 438">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐτοκράτορος)</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -117,19 +117,19 @@
             <ins title="nlp 2.00">vero</ins>
           </span>
         </span>
-        <span id="w_21" class="ocr_word" title="bbox 1147 447 1334 519" lang="grc">
+        <span id="w_21_0" class="ocr_word" title="bbox 1147 447 1334 519">
           <span class="alternatives">
-            <ins title="nlp 2.00">(φόνον</ins>
+            <ins class="alt" title="nlp 2.00">(φόνον</ins>
+          </span>
+        </span>
+        <span id="w_21_1" class="ocr_word" title="bbox 1147 447 1334 519">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_22" class="ocr_word" title="bbox 1372 470 1456 502" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_23" class="ocr_word" title="bbox 1489 448 1867 518" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτοκράτορος)</ins>
           </span>
         </span>
       </span>
@@ -186,19 +186,19 @@
             <ins class="alt" title="nlp 1.00">21</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 951 619 970 649">
+        <span id="w_34_0" class="ocr_word" title="bbox 951 619 970 649">
           <span class="alternatives">
-            <ins title="nlp 2.00">I</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_34_1" class="ocr_word" title="bbox 951 619 970 649">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 1011 604 1132 663">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">232,</ins>
-          </span>
-        </span>
-        <span id="w_36" class="ocr_word" title="bbox 1167 604 1252 649">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">27.</ins>
           </span>
         </span>
       </span>
@@ -603,9 +603,14 @@
             <ins title="nlp 2.00">cum</ins>
           </span>
         </span>
-        <span id="w_115" class="ocr_word" title="bbox 971 1414 1096 1461">
+        <span id="w_115_0" class="ocr_word" title="bbox 971 1414 1096 1461">
           <span class="alternatives">
-            <ins title="nlp 2.00">hihil</ins>
+            <ins class="alt" title="nlp 2.00">nihil</ins>
+          </span>
+        </span>
+        <span id="w_115_1" class="ocr_word" title="bbox 971 1414 1096 1461">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1122 1414 1364 1462">
@@ -616,11 +621,6 @@
         <span id="w_117" class="ocr_word" title="bbox 1391 1416 1641 1475">
           <span class="alternatives">
             <ins title="nlp 2.00">sequatur,</ins>
-          </span>
-        </span>
-        <span id="w_118" class="ocr_word" title="bbox 1681 1414 1874 1475">
-          <span class="alternatives">
-            <ins title="nlp 2.00">aliquot</ins>
           </span>
         </span>
       </span>
@@ -857,11 +857,6 @@
         </span>
         <span id="w_163" class="ocr_word" title="bbox 353 1873 471 1904">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">3,0011</ins>
-          </span>
-        </span>
-        <span id="w_164" class="ocr_word" title="bbox 477 1858 692 1906">
-          <span class="alternatives">
             <ins title="nlp 2.00">accusativum</ins>
           </span>
         </span>
@@ -1082,16 +1077,11 @@
         </span>
         <span id="w_206" class="ocr_word" title="bbox 1762 2243 1877 2289" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τρω-</ins>
+            <ins title="nlp 2.00">τρωπᾶσθαι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 187 2300 631 2359">
-        <span id="w_207" class="ocr_word" title="bbox 187 2300 380 2346" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πᾶσθαι</ins>
-          </span>
-        </span>
         <span id="w_208" class="ocr_word" title="bbox 415 2300 631 2359">
           <span class="alternatives">
             <ins title="nlp 2.00">petatur.</ins>
@@ -1327,9 +1317,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 184 2664 1879 2729">
-        <span id="w_254" class="ocr_word" title="bbox 184 2664 528 2724">
+        <span id="w_254_0" class="ocr_word" title="bbox 184 2664 528 2724">
           <span class="alternatives">
-            <ins title="nlp 2.00">Boëmundus,</ins>
+            <ins class="alt" title="nlp 2.00">Βoëmundus,</ins>
+          </span>
+        </span>
+        <span id="w_254_1" class="ocr_word" title="bbox 184 2664 528 2724">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_255" class="ocr_word" title="bbox 585 2681 642 2712">
@@ -1360,11 +1355,6 @@
         <span id="w_260" class="ocr_word" title="bbox 1690 2667 1775 2716">
           <span class="alternatives">
             <ins title="nlp 2.00">sed</ins>
-          </span>
-        </span>
-        <span id="w_261" class="ocr_word" title="bbox 1819 2668 1879 2715">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ut</ins>
           </span>
         </span>
       </span>
