--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0046.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0046.html
@@ -294,9 +294,14 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_55" class="ocr_word" title="bbox 826 763 960 832" lang="grc">
+        <span id="w_55_0" class="ocr_word" title="bbox 826 763 960 832">
           <span class="alternatives">
-            <ins title="nlp 2.00">τὰς</ins>
+            <ins class="alt" title="nlp 2.00">„τὰς</ins>
+          </span>
+        </span>
+        <span id="w_55_1" class="ocr_word" title="bbox 826 763 960 832">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_56" class="ocr_word" title="bbox 993 765 1151 825" lang="grc">
@@ -312,11 +317,6 @@
         <span id="w_58" class="ocr_word" title="bbox 1289 763 1683 829" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀποτυφλώσεως</ins>
-          </span>
-        </span>
-        <span id="w_59" class="ocr_word" title="bbox 1709 780 1873 816" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">εἰσαῦθις</ins>
           </span>
         </span>
       </span>
@@ -692,16 +692,11 @@
         </span>
         <span id="w_136" class="ocr_word" title="bbox 1742 1385 1877 1451" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρώ-</ins>
+            <ins title="nlp 2.00">πρώτως</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 186 1462 1876 1530">
-        <span id="w_137" class="ocr_word" title="bbox 186 1487 279 1527" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τως</ins>
-          </span>
-        </span>
         <span id="w_138" class="ocr_word" title="bbox 326 1487 389 1516" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καινοτομούμενον·</ins>
@@ -994,14 +989,14 @@
             <ins class="alt" title="nlp 1.00">παρὰ</ins>
           </span>
         </span>
-        <span id="w_196" class="ocr_word" title="bbox 1902 1943 1939 1976">
+        <span id="w_196_0" class="ocr_word" title="bbox 1902 1943 1939 1976">
           <span class="alternatives">
-            <ins title="nlp 2.00">p.</ins>
+            <ins class="alt" title="nlp 2.00">P.</ins>
           </span>
         </span>
-        <span id="w_197" class="ocr_word" title="bbox 1961 1943 1981 1976">
+        <span id="w_196_1" class="ocr_word" title="bbox 1902 1943 1939 1976">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">9</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1169,9 +1164,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 189 2313 1880 2380">
-        <span id="w_231" class="ocr_word" title="bbox 466 2316 648 2363" lang="grc">
+        <span id="w_231_0" class="ocr_word" title="bbox 466 2316 648 2363">
           <span class="alternatives">
-            <ins title="nlp 2.00">τοῦ Δούκα</ins>
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
+          </span>
+        </span>
+        <span id="w_231_1" class="ocr_word" title="bbox 466 2316 648 2363">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Δούκα</ins>
           </span>
         </span>
         <span id="w_232" class="ocr_word" title="bbox 675 2331 759 2362" lang="grc">
@@ -1426,9 +1426,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 305 2805 1880 2881">
-        <span id="w_282" class="ocr_word" title="bbox 305 2815 333 2853">
+        <span id="w_282_0" class="ocr_word" title="bbox 305 2815 333 2853">
           <span class="alternatives">
-            <ins title="nlp 2.00">4 ἐπήγαγε</ins>
+            <ins class="alt" title="nlp 2.00">4</ins>
+          </span>
+        </span>
+        <span id="w_282_1" class="ocr_word" title="bbox 305 2815 333 2853">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἐπήγαγε</ins>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 676 2815 701 2854">
