--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0047.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0047.html
@@ -794,9 +794,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_153" class="ocr_word" title="bbox 1554 1554 1790 1614" lang="grc">
+        <span id="w_153_0" class="ocr_word" title="bbox 1554 1554 1790 1614">
           <span class="alternatives">
-            <ins title="nlp 2.00">στρατιῶται</ins>
+            <ins class="alt" title="nlp 2.00">στρατιῶ-</ins>
           </span>
         </span>
       </span>
@@ -806,9 +806,14 @@
             <ins title="nlp 2.00">D</ins>
           </span>
         </span>
-        <span id="w_156" class="ocr_word" title="bbox 217 1642 299 1672" lang="grc">
+        <span id="w_156_0" class="ocr_word" title="bbox 217 1642 299 1672">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">ται</ins>
+          </span>
+        </span>
+        <span id="w_156_1" class="ocr_word" title="bbox 217 1642 299 1672">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_157" class="ocr_word" title="bbox 339 1623 530 1672" lang="grc">
@@ -1303,9 +1308,14 @@
             <ins class="alt" title="nlp 1.00">10</ins>
           </span>
         </span>
-        <span id="w_252" class="ocr_word" title="bbox 103 2495 201 2527" lang="grc">
+        <span id="w_252_0" class="ocr_word" title="bbox 103 2495 201 2527">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins class="alt" title="nlp 2.00">τῶν</ins>
+          </span>
+        </span>
+        <span id="w_252_1" class="ocr_word" title="bbox 103 2495 201 2527">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Τούρκων</ins>
           </span>
         </span>
         <span id="w_253" class="ocr_word" title="bbox 250 2482 485 2544" lang="grc">
