--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0036.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0036.html
@@ -1031,16 +1031,11 @@
         </span>
         <span id="w_199" class="ocr_word" title="bbox 1667 1985 1883 2016" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κακοπα-</ins>
+            <ins title="nlp 2.00">κακοπαθείας,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 195 2040 1883 2108">
-        <span id="w_200" class="ocr_word" title="bbox 195 2043 363 2104" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θείας,</ins>
-          </span>
-        </span>
         <span id="w_201" class="ocr_word" title="bbox 414 2042 535 2106" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τάχα</ins>
