--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0026.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0026.html
@@ -230,7 +230,7 @@
         </span>
         <span id="w_42" class="ocr_word" title="bbox 1388 720 1440 753">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">86</ins>
+            <ins title="nlp 2.00">se</ins>
           </span>
         </span>
         <span id="w_43" class="ocr_word" title="bbox 1491 721 1590 753">
@@ -712,9 +712,14 @@
             <ins title="nlp 2.00">cf.</ins>
           </span>
         </span>
-        <span id="w_136" class="ocr_word" title="bbox 320 1608 338 1639">
+        <span id="w_136_0" class="ocr_word" title="bbox 320 1608 338 1639">
           <span class="alternatives">
-            <ins title="nlp 2.00">I</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_136_1" class="ocr_word" title="bbox 320 1608 338 1639">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_137" class="ocr_word" title="bbox 374 1593 496 1653">
@@ -760,11 +765,6 @@
         <span id="w_145" class="ocr_word" title="bbox 1423 1607 1466 1638">
           <span class="alternatives">
             <ins title="nlp 2.00">ν.</ins>
-          </span>
-        </span>
-        <span id="w_146" class="ocr_word" title="bbox 1501 1586 1686 1656" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτός).</ins>
           </span>
         </span>
       </span>
@@ -962,9 +962,14 @@
             <ins title="nlp 2.00">nus</ins>
           </span>
         </span>
-        <span id="w_185" class="ocr_word" title="bbox 358 1960 439 2007">
+        <span id="w_185_0" class="ocr_word" title="bbox 358 1960 439 2007">
           <span class="alternatives">
-            <ins title="nlp 2.00">velj</ins>
+            <ins class="alt" title="nlp 2.00">vel</ins>
+          </span>
+        </span>
+        <span id="w_185_1" class="ocr_word" title="bbox 358 1960 439 2007">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_186" class="ocr_word" title="bbox 477 1959 585 2006">
@@ -995,11 +1000,6 @@
         <span id="w_191" class="ocr_word" title="bbox 1507 1976 1743 2020">
           <span class="alternatives">
             <ins title="nlp 2.00">umquam</ins>
-          </span>
-        </span>
-        <span id="w_192" class="ocr_word" title="bbox 1798 1961 1916 2009">
-          <span class="alternatives">
-            <ins title="nlp 2.00">fuit:</ins>
           </span>
         </span>
       </span>
@@ -1303,9 +1303,14 @@
             <ins class="alt" title="nlp 1.00">29</ins>
           </span>
         </span>
-        <span id="w_253" class="ocr_word" title="bbox 1081 2543 1184 2596">
+        <span id="w_253_0" class="ocr_word" title="bbox 1081 2543 1184 2596">
           <span class="alternatives">
-            <ins title="nlp 2.00">᾿rex</ins>
+            <ins class="alt" title="nlp 2.00">῾rex</ins>
+          </span>
+        </span>
+        <span id="w_253_1" class="ocr_word" title="bbox 1081 2543 1184 2596">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_254" class="ocr_word" title="bbox 1216 2550 1497 2610">
@@ -1316,11 +1321,6 @@
         <span id="w_255" class="ocr_word" title="bbox 1536 2551 1736 2613">
           <span class="alternatives">
             <ins title="nlp 2.00">quidam</ins>
-          </span>
-        </span>
-        <span id="w_256" class="ocr_word" title="bbox 1767 2530 1920 2620">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Nemrod,</ins>
           </span>
         </span>
       </span>
@@ -1389,7 +1389,7 @@
         </span>
         <span id="w_270" class="ocr_word" title="bbox 1224 2693 1468 2758">
           <span class="alternatives">
-            <ins title="nlp 2.00">sumpsit᾿.</ins>
+            <ins title="nlp 2.00">᾿.</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1527 2680 1693 2746">
