--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0049.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0049.html
@@ -54,7 +54,7 @@
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1027 316 1200 381" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδὲν</ins>
+            <ins title="nlp 2.00">(οὐδὲν</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1236 336 1328 383" lang="grc">
