--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0051.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0051.html
@@ -79,16 +79,11 @@
         </span>
         <span id="w_13" class="ocr_word" title="bbox 1645 312 1790 363" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στρα-</ins>
+            <ins title="nlp 2.00">στρατιώτην</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 99 374 1790 444">
-        <span id="w_14" class="ocr_word" title="bbox 99 378 279 440" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τιώτην</ins>
-          </span>
-        </span>
         <span id="w_15" class="ocr_word" title="bbox 315 375 577 426" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀθάνατον</ins>
@@ -205,16 +200,11 @@
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1641 530 1790 595" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔφευ-</ins>
+            <ins title="nlp 2.00">ἔφευγον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 97 605 1854 678">
-        <span id="w_39" class="ocr_word" title="bbox 97 629 185 678" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γον</ins>
-          </span>
-        </span>
         <span id="w_40" class="ocr_word" title="bbox 222 628 320 659" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑπὸ</ins>
@@ -445,16 +435,11 @@
         </span>
         <span id="w_84" class="ocr_word" title="bbox 1720 940 1790 969" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τι-</ins>
+            <ins title="nlp 2.00">τινας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 100 995 1858 1065">
-        <span id="w_85" class="ocr_word" title="bbox 100 1020 185 1059" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νας</ins>
-          </span>
-        </span>
         <span id="w_86" class="ocr_word" title="bbox 224 995 438 1063" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀμύνειν</ins>
@@ -485,21 +470,26 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_92" class="ocr_word" title="bbox 1663 995 1789 1065" lang="grc">
+        <span id="w_92_0" class="ocr_word" title="bbox 1663 995 1789 1065">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀγῶωος.</ins>
+            <ins class="alt" title="nlp 2.00">ἀγῶνος.</ins>
           </span>
         </span>
-        <span id="w_93" class="ocr_word" title="bbox 1815 1014 1858 1045">
+        <span id="w_92_1" class="ocr_word" title="bbox 1663 995 1789 1065">
           <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 48 1072 1794 1143">
-        <span id="w_94" class="ocr_word" title="bbox 48 1089 74 1122">
+        <span id="w_94_0" class="ocr_word" title="bbox 48 1089 74 1122">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_94_1" class="ocr_word" title="bbox 48 1089 74 1122">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 257 1072 557 1140" lang="grc">
@@ -532,11 +522,6 @@
             <ins class="alt" title="nlp 1.00">φάλαγγα</ins>
           </span>
         </span>
-        <span id="w_102" class="ocr_word" title="bbox 1710 1076 1794 1126" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 96 1150 1794 1220">
         <span id="w_103" class="ocr_word" title="bbox 96 1155 194 1220" lang="grc">
@@ -564,19 +549,19 @@
             <ins class="alt" title="nlp 1.00">εὐψυχοτέρους</ins>
           </span>
         </span>
-        <span id="w_108" class="ocr_word" title="bbox 1471 1155 1553 1220" lang="grc">
+        <span id="w_108_0" class="ocr_word" title="bbox 1471 1155 1553 1220">
           <span class="alternatives">
-            <ins title="nlp 2.00">(</ins>
+            <ins class="alt" title="nlp 2.00">(ἓξ</ins>
+          </span>
+        </span>
+        <span id="w_108_1" class="ocr_word" title="bbox 1471 1155 1553 1220">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_109" class="ocr_word" title="bbox 1580 1151 1635 1203" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_110" class="ocr_word" title="bbox 1661 1157 1794 1219" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἦσαν</ins>
           </span>
         </span>
       </span>
@@ -662,12 +647,7 @@
       <span class="ocr_line" title="bbox 95 1384 1856 1452">
         <span id="w_127" class="ocr_word" title="bbox 95 1386 438 1452" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀναισχύντως</ins>
-          </span>
-        </span>
-        <span id="w_128" class="ocr_word" title="bbox 455 1422 468 1448">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἀναισχύντως,</ins>
           </span>
         </span>
         <span id="w_129" class="ocr_word" title="bbox 510 1407 606 1436" lang="grc">
@@ -875,9 +855,14 @@
             <ins class="alt" title="nlp 1.00">στρατιᾶς</ins>
           </span>
         </span>
-        <span id="w_168" class="ocr_word" title="bbox 361 1775 616 1841" lang="grc">
+        <span id="w_168_0" class="ocr_word" title="bbox 361 1775 616 1841">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐβούλετο ,</ins>
+            <ins class="alt" title="nlp 2.00">ἐβούλετο,</ins>
+          </span>
+        </span>
+        <span id="w_168_1" class="ocr_word" title="bbox 361 1775 616 1841">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_169" class="ocr_word" title="bbox 644 1776 920 1840" lang="grc">
@@ -903,11 +888,6 @@
         <span id="w_173" class="ocr_word" title="bbox 1327 1776 1792 1825" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διασκεδασθέντων</ins>
-          </span>
-        </span>
-        <span id="w_174" class="ocr_word" title="bbox 1815 1790 1856 1821">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">20</ins>
           </span>
         </span>
       </span>
@@ -947,9 +927,9 @@
             <ins class="alt" title="nlp 1.00">ἐνέκειτο.</ins>
           </span>
         </span>
-        <span id="w_182" class="ocr_word" title="bbox 1698 1874 1791 1917" lang="grc">
+        <span id="w_182_0" class="ocr_word" title="bbox 1698 1874 1791 1917">
           <span class="alternatives">
-            <ins title="nlp 2.00">μήπω</ins>
+            <ins class="alt" title="nlp 2.00">μή-</ins>
           </span>
         </span>
       </span>
@@ -1001,16 +981,11 @@
         </span>
         <span id="w_192" class="ocr_word" title="bbox 1653 1931 1792 1980" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Σκύ-</ins>
+            <ins title="nlp 2.00">Σκύθαι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 96 2007 1792 2074">
-        <span id="w_193" class="ocr_word" title="bbox 96 2015 188 2059" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θαι</ins>
-          </span>
-        </span>
         <span id="w_194" class="ocr_word" title="bbox 234 2029 345 2070" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοὺς</ins>
@@ -1090,16 +1065,11 @@
         </span>
         <span id="w_209" class="ocr_word" title="bbox 1653 2083 1790 2135" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπώ-</ins>
+            <ins title="nlp 2.00">ἀπώσαντο</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 96 2163 1854 2231">
-        <span id="w_210" class="ocr_word" title="bbox 96 2179 244 2214" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σαντο</ins>
-          </span>
-        </span>
         <span id="w_211" class="ocr_word" title="bbox 269 2185 352 2215" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1130,14 +1100,14 @@
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
           </span>
         </span>
-        <span id="w_217" class="ocr_word" title="bbox 1401 2165 1790 2231" lang="grc">
+        <span id="w_217_0" class="ocr_word" title="bbox 1401 2165 1790 2231">
           <span class="alternatives">
-            <ins title="nlp 2.00">λαφυραυωγίαν</ins>
+            <ins class="alt" title="nlp 2.00">λαφυραγωγίαν</ins>
           </span>
         </span>
-        <span id="w_218" class="ocr_word" title="bbox 1813 2178 1854 2209">
+        <span id="w_217_1" class="ocr_word" title="bbox 1401 2165 1790 2231">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">25</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1226,16 +1196,11 @@
         </span>
         <span id="w_235" class="ocr_word" title="bbox 1602 2320 1791 2387" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τρεψά-</ins>
+            <ins title="nlp 2.00">τρεψάμενοι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 96 2393 1790 2463">
-        <span id="w_236" class="ocr_word" title="bbox 96 2415 232 2462" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μενοι</ins>
-          </span>
-        </span>
         <span id="w_237" class="ocr_word" title="bbox 270 2396 355 2445" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
@@ -1268,16 +1233,11 @@
         </span>
         <span id="w_243" class="ocr_word" title="bbox 1551 2398 1790 2461" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαφθεί-</ins>
+            <ins title="nlp 2.00">διαφθείρουσι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 97 2468 1788 2543">
-        <span id="w_244" class="ocr_word" title="bbox 97 2490 237 2541" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρουσι</ins>
-          </span>
-        </span>
         <span id="w_245" class="ocr_word" title="bbox 283 2475 372 2540" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
