--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0037.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0037.html
@@ -430,16 +430,11 @@
         </span>
         <span id="w_81" class="ocr_word" title="bbox 1692 952 1827 998" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀκρι-</ins>
+            <ins title="nlp 2.00">ἀκριβεστάτης</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 131 1008 1892 1075">
-        <span id="w_82" class="ocr_word" title="bbox 131 1009 371 1075" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βεστάτης</ins>
-          </span>
-        </span>
         <span id="w_83" class="ocr_word" title="bbox 421 1009 531 1075" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περὶ</ins>
@@ -1256,12 +1251,7 @@
       <span class="ocr_line" title="bbox 135 2323 1832 2396">
         <span id="w_243" class="ocr_word" title="bbox 135 2327 288 2390" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μόνον</ins>
-          </span>
-        </span>
-        <span id="w_244" class="ocr_word" title="bbox 303 2365 316 2392">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">μόνον,</ins>
           </span>
         </span>
         <span id="w_245" class="ocr_word" title="bbox 355 2323 477 2377" lang="grc">
