--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0052.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0052.html
@@ -264,12 +264,7 @@
         </span>
         <span id="w_48" class="ocr_word" title="bbox 796 702 1149 771" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπισυρόμενον</ins>
-          </span>
-        </span>
-        <span id="w_49" class="ocr_word" title="bbox 1163 745 1175 767">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἐπισυρόμενον,</ins>
           </span>
         </span>
         <span id="w_50" class="ocr_word" title="bbox 1216 713 1276 768" lang="grc">
@@ -710,18 +705,13 @@
             <ins class="alt" title="nlp 1.00">τε</ins>
           </span>
         </span>
-        <span id="w_134" class="ocr_word" title="bbox 1723 1415 1894 1468" lang="grc">
+        <span id="w_134_0" class="ocr_word" title="bbox 1723 1415 1894 1468">
           <span class="alternatives">
-            <ins title="nlp 2.00">χρουδοφάλαρον</ins>
+            <ins class="alt" title="nlp 2.00">χρυσοφάλαρον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 208 1477 1893 1545">
-        <span id="w_135" class="ocr_word" title="bbox 208 1481 431 1543" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φάλαρον</ins>
-          </span>
-        </span>
         <span id="w_136" class="ocr_word" title="bbox 469 1484 660 1529" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκεῖνον</ins>
@@ -969,9 +959,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_185" class="ocr_word" title="bbox 699 1950 1121 2011" lang="grc">
+        <span id="w_185_0" class="ocr_word" title="bbox 699 1950 1121 2011">
           <span class="alternatives">
-            <ins title="nlp 2.00">ξυνέλεγε</ins>
+            <ins class="alt" title="nlp 2.00">παλιμπορεύτους</ins>
+          </span>
+        </span>
+        <span id="w_185_1" class="ocr_word" title="bbox 699 1950 1121 2011">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_186" class="ocr_word" title="bbox 1153 1946 1329 2010" lang="grc">
@@ -992,11 +987,6 @@
         <span id="w_189" class="ocr_word" title="bbox 1590 1964 1673 1993" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_190" class="ocr_word" title="bbox 1698 1949 1902 1993" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔπειθεν</ins>
           </span>
         </span>
       </span>
@@ -1236,16 +1226,11 @@
         </span>
         <span id="w_236" class="ocr_word" title="bbox 1694 2330 1901 2396" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστραμ-</ins>
+            <ins title="nlp 2.00">ἐστραμμένα, </ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 211 2405 1899 2476">
-        <span id="w_237" class="ocr_word" title="bbox 211 2419 362 2466" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένα,</ins>
-          </span>
-        </span>
         <span id="w_238" class="ocr_word" title="bbox 403 2423 486 2453" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1382,16 +1367,11 @@
         </span>
         <span id="w_264" class="ocr_word" title="bbox 1765 2565 1901 2613" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Σκύ-</ins>
+            <ins title="nlp 2.00">Σκύθαι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 217 2634 1960 2706">
-        <span id="w_265" class="ocr_word" title="bbox 217 2638 310 2682" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θαι</ins>
-          </span>
-        </span>
         <span id="w_266" class="ocr_word" title="bbox 348 2634 525 2685" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">νόστου</ins>
