--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0027.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0027.html
@@ -962,9 +962,14 @@
             <ins title="nlp 2.00">cf.</ins>
           </span>
         </span>
-        <span id="w_187" class="ocr_word" title="bbox 1221 2018 1259 2048">
+        <span id="w_187_0" class="ocr_word" title="bbox 1221 2018 1259 2048">
           <span class="alternatives">
-            <ins title="nlp 2.00">π</ins>
+            <ins class="alt" title="nlp 2.00">11</ins>
+          </span>
+        </span>
+        <span id="w_187_1" class="ocr_word" title="bbox 1221 2018 1259 2048">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1299 2004 1381 2064">
@@ -975,11 +980,6 @@
         <span id="w_189" class="ocr_word" title="bbox 1414 2004 1482 2051">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">26</ins>
-          </span>
-        </span>
-        <span id="w_190" class="ocr_word" title="bbox 1524 2006 1811 2068" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λογοποιουμένην</ins>
           </span>
         </span>
       </span>
@@ -1011,9 +1011,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 120 2144 1809 2215">
-        <span id="w_197" class="ocr_word" title="bbox 120 2166 139 2197">
+        <span id="w_197_0" class="ocr_word" title="bbox 120 2166 139 2197">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ι</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_197_1" class="ocr_word" title="bbox 120 2166 139 2197">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_198" class="ocr_word" title="bbox 191 2153 309 2213">
@@ -1051,11 +1056,6 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_205" class="ocr_word" title="bbox 1745 2170 1809 2201" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἕω</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 121 2219 1811 2289">
         <span id="w_206" class="ocr_word" title="bbox 121 2219 297 2286" lang="grc">
@@ -1063,10 +1063,14 @@
             <ins class="alt" title="nlp 1.00">μαθὼν</ins>
           </span>
         </span>
-        <span id="w_207" class="ocr_word" title="bbox 358 2240 397 2271">
+        <span id="w_207_0" class="ocr_word" title="bbox 358 2240 397 2271">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins class="alt" title="nlp 2.00">11</ins>
+          </span>
+        </span>
+        <span id="w_207_1" class="ocr_word" title="bbox 358 2240 397 2271">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_208" class="ocr_word" title="bbox 448 2226 537 2285">
@@ -1092,11 +1096,6 @@
         <span id="w_212" class="ocr_word" title="bbox 1303 2219 1557 2287" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Κομάνων</ins>
-          </span>
-        </span>
-        <span id="w_213" class="ocr_word" title="bbox 1624 2225 1811 2288" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἔφοδον</ins>
           </span>
         </span>
       </span>
