--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0038.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0038.html
@@ -892,7 +892,7 @@
       <span class="ocr_line" title="bbox 123 1789 1877 1860">
         <span id="w_172" class="ocr_word" title="bbox 123 1790 492 1855" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">20 θαυμάτων,</ins>
+            <ins title="nlp 2.00">θαυμάτων,</ins>
           </span>
         </span>
         <span id="w_173" class="ocr_word" title="bbox 540 1789 665 1857" lang="grc">
